Add change grind function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="grid container"></div>
-    <div class="control container"></div>
+    <div class="control container">
+        <button class="control button">Change Grid</button>
+    </div>
 </body>
 </html>
