Add etching function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <div class="grid container"></div>
     <div class="control container">
         <button class="control button">Change Grid</button>
+        <input type="radio" id="radioNormal" name="etchMode" value="normal" checked>
+        <label for="radioNormal">Normal</label>
+    
+        <input type="radio" id="radioRainbow" name="etchMode" value="rainbow">
+        <label for="radioRainbow">Rainbow</label>
+
+        <input type="radio" id="radioWhiten" name="etchMode" value="whiten">
+        <label for="radioWhiten">Whiten</label>
     </div>
 </body>
 </html>
